# platform-agent

./: .env.example  .gitignore  .vercelignore  AGENTS.md  GUIDE.md  JOURNEY.md  Makefile  README.md  local-llm-onprem.md  pyproject.toml  requirements-lambda.txt
.claude/: harness-config.json  launch.json  settings.json
.codex/rules/: overnight.rules
.kiro/agents/: aws-ops.json  cdk-dev.json  overnight-harness.json
.kiro/hooks/: pre-tool-use-safety.sh
.kiro/settings/: mcp.json
.kiro/steering/: harness-checkpoint.md  harness-diagnose.md  harness-overnight-report.md  harness-overnight-seed.md  harness-sync.md  harness-tidy-docs.md
dashboard/: .env.example  README.md  package-lock.json  package.json
dashboard/src/: auth.ts  middleware.ts
docs/: AGENT_BRIEF.md  AI_AGENT_LIVE_CALL_GUIDE.md  ARCHITECTURE.md  COMPLETED_SUMMARY.md  DASHBOARD_AUTH_DESIGN.md  DASHBOARD_DESIGN.md  DASHBOARD_LIVE_DATA.md  DECISIONS.md  DOCS_POLICY.md  KIRO.md  NEXT_PLAN.md  PRESENTATION.md  PROGRESS_LOG.md  README.md  SIMPLE_ARCHITECTURE.md  SLACK_APP_SETUP.md  STATUS.md  generate_architecture.py
examples/: orders-api.yaml
infra/local/: setup.sh  (+2 more)
scripts/: live_model_sweep.py  live_net_demo.py  live_tier2_demo.py  provision_gke_live.py  slack_live_approval.py
tests/: test_activity_writer.py  test_adapters.py  test_analyzer_llm_backend.py  test_approval_bridge.py  test_approval_bridge_e2e.py  test_aws_session.py  test_azure_day2_operations.py  test_capability_runbook.py  test_capability_runbook_e2e.py  test_cdk_emitter.py  test_circuit_breaker.py  test_cloud_native_deployers.py  test_cost_budget_gate.py  test_cost_metrics.py  test_dashboard_auth_and_activity.py  test_dashboard_incident_persistence.py  test_decision.py  test_deploy_recorder.py  test_deployment.py  test_deployment_adapters.py  test_deployment_rollback_executor.py  test_detector.py  test_eval_harness.py  test_executor_notification_action.py  test_gateway.py  test_gcp_day2_operations.py  test_guardian.py  test_helm_chart.py  test_ingress.py  test_local_deploy_api.py  test_local_deployer.py  test_manifest_generator.py  test_mcp_connector.py  test_memory_tier.py  test_mlx_qwen_tool_proxy.py  test_model_router.py  test_model_sweep.py  test_models.py  test_multicloud_runners.py  test_onprem_addons_module.py  (+22 more)
(+317 files in other folders)
