[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "platform-agent"
version = "0.1.0"
description = "AWS-native platform agent for provisioning, deployment validation, and autonomous operations"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.34",
    "python-dotenv>=1.0",
    "structlog>=24.1",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1",
    "pytest-asyncio>=0.23",
    "moto[cloudwatch,logs,ssm,stepfunctions]>=5.0",
    "ruff>=0.4",
    "mypy>=1.9",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["src/stacks/cdk.out", "src/stacks/node_modules"]
asyncio_default_fixture_loop_scope = "function"
