[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "platform-agent"
version = "0.1.0"
description = "AWS-native platform agent for provisioning, deployment validation, and autonomous operations"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.34",
    "python-dotenv>=1.0",
    "structlog>=24.1",
    "requests>=2.31",
    "pyyaml>=6.0",
    "strands-agents>=1.0",
]

# PEP 621: each extra is a plain array under this one table. The previous
# `[project.optional-dependencies.<name>]` + `dependencies = [...]` shape was
# invalid metadata — latent until the reference #7 image ran `pip install .`.
[project.optional-dependencies]
gcp = ["google-adk>=1.0", "google-cloud-aiplatform>=1.90"]
azure = ["agent-framework>=1.0", "azure-identity>=1.15", "azure-ai-projects>=1.0"]
onprem = ["pydantic-ai-slim[openai]>=2.9", "mlx-lm>=0.19"]
dev = [
    "pytest>=8.1",
    "pytest-asyncio>=0.23",
    "moto[cloudwatch,logs,ssm,stepfunctions]>=5.0",
    "ruff>=0.4",
    "mypy>=1.9",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["src/stacks/cdk.out", "src/stacks/node_modules"]
asyncio_default_fixture_loop_scope = "function"
